add small fix and npm package correct version

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv1": "^1.6.14"
   }
 }
