--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/onurkayhann/bjj-camp-backend#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "braintree": "^3.12.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
